--- a/Storm-Analysis.Rmd
+++ b/Storm-Analysis.Rmd
@@ -2,7 +2,9 @@
 title: "Storm Analysis"
 author: "Nick Daughenbaugh"
 date: "August 6, 2020"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 
@@ -25,6 +27,7 @@ Download the raw data file and extract the data into a dataframe.Then convert to
 ```{r DataLoading}
 library("data.table")
 library("ggplot2")
+library("tinytex")
 fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
 download.file(fileUrl, destfile = paste0("C:/Users/nrdau/Documents/R/data/StormData.csv.bz2"))
 stormDF <- read.csv("C:/Users/nrdau/Documents/R/data/StormData.csv.bz2")
